--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,121 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+body {
+    margin: 0;
+    padding: 0;
+
 }
 
-html, body {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
+.main-flexbox-container {
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+.left-panel {
+    flex: 1
 }
 
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+.headshot {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.right-panel {
+
+    flex: 1;
+    padding: 1rem;
+
+    /* panel contents are flexed */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.engageButtons, .socialButtons {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: .5rem;
+
+}
+
+
+
+
+
+
+
+/* stack the panels when the width is less than or equal to 992px (large devices)*/
+@media only screen and (max-width: 992px) {
+    .main-flexbox-container {
+        flex-direction: column;
+    }
+
+    .headshot {
+        height: 50vh;
+    }
+
+}
+
+/* when the panels are stacked, and the height is starting to squish */
+@media only screen and (max-height: 725px) and (max-width: 992px) {
+    .headshot {
+        object-position: 43% 25%;
+    }
+}
+
+/* when the panels are side-by-side, and the height is starting to squish */
+@media only screen and (min-width: 992px) and (max-height: 425px) {
+    .headshot {
+        object-position: 50% 15%;
+    }
+}
+
+
+
+/*
+*
+* ==========================================
+* Circle button customizations, stolen from:
+* https://bootstrapious.com/p/bootstrap-circle-button
+* ==========================================
+*
+*/
+
+.btn-circle {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.btn-circle i {
+    position: relative;
+    top: -1px;
+}
+
+.btn-circle-sm {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 0.9rem;
+}
+
+.btn-circle-lg {
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    font-size: 1.1rem;
+}
+
+.btn-circle-xl {
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 1.3rem;
 }
