--- a/src/_sandboxed/flexbox.css
+++ b/src/_sandboxed/flexbox.css
@@ -1,34 +1,17 @@
-* {
-    box-sizing: border-box;
+body {
     margin: 0;
     padding: 0;
-    
+
 }
 
-body {
+.main-flexbox-container {
     height: 100vh;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
 .left-panel {
-    grid-column: 1/2;
-}
-
-.right-panel {
-
-    grid-column: 2/3;
-    padding: 1rem;
-
-    /* panel contents are flexed */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+    flex: 1
 }
 
 .headshot {
@@ -37,9 +20,21 @@ body {
     object-fit: cover;
     overflow: hidden;
     object-position: top;
-
+    
+    /* background: url('./images/landing_1500x1000.jpg'); */
 }
 
+.right-panel {
+
+    flex: 1;
+    padding: 1rem;
+
+    /* panel contents are flexed */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
 
 .engageButtons, .socialButtons {
 
@@ -58,29 +53,13 @@ body {
 
 /* stack the panels when the width is less than or equal to 992px (large devices)*/
 @media only screen and (max-width: 992px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-
-    }
-
-    .left-panel {
-        grid-row: 1/2;
-        grid-column: 1/2;
-        /* height: 50vh; */
-
-    }
-
-    .right-panel {
-        grid-row: 2/3;
-        grid-column: 1/2;
-        /* height: 50vh; */
-
+    .main-flexbox-container {
+        flex-direction: column;
     }
 
     .headshot {
         height: 50vh;
+        /* background: url('./images/landing_1500x1000.jpg'); */
     }
 
 
